welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:62: error: Unmatched closing brace '}' ignored here
}
^